# BadUSB-Detector

./: CMakeLists.txt  badusb_xgboost.json
data/BadUSB_files/: generate_script.py
data/files_old/: train_xgboost.py
include/: BadUSBDetector.h  CollectingDataBadUSB.h  CollectingDataHuman.h  DisconnectKeyboard.h  GeminiAnalyzer.h  UsbUtils.h
src/: BadUSBDetector.cpp  CollectingDataBadUSB.cpp  CollectingDataHuman.cpp  DisconnectKeyboard.cpp  GeminiAnalyzer.cpp  Shadow_evaluator.cpp  UsbUtils.cpp  export_to_cpp.py  main.cpp  models_compare.py  shadow_tester_pkl.py  visualise_3d_plane.py  visualise_3d_plane_badusb_data.py  visualize_live_metrics.py
